# hidden-features

./: .gitignore  README.md  basic_features.npy  conda_env.yml  fit_dataset.py  glm_test.py  lbrl_runner.py  multiclass.py  new_lbrl_runner.py  openml_filtered_ids.txt  run_fitopenml.py  run_linear.py  run_linear_newtest.py  run_linearfinite.py  run_logistic.py  run_mnist.py  run_multiclass.py  run_regression_test.py  run_regtest_linear.py  run_regtest_multiclass.py  setup.py  torchleader_discrete.py
NEW_CODE/: README.md  conda_env.yml  setup.py
NEW_SIMPLE/: conda_env.yml  leader.py  linearenv.py  linucb.py  litleader.py  run_torch.py  torchleader.py  torchleaderv0.py  utils_linear.py
algorithms/: models.py
algs/: generalized_linear.py  linear.py  nnepsilongreedy.py  nnleader.py  nnlinucb.py  nnmodel.py  replaybuffer.py  torchleader_discrete.py  xbdiscrete.py
conf/: config.yaml  lbrl_leader.yaml
cpp/: CMakeLists.txt  README.md  abstractclasses.h  adversarial_master.h  all_jester.cpp  all_lastfm.cpp  bandit.h  combine.cpp  cont_all.cpp  contlinrep.h  corral_old.h  dimensions.cpp  dimensions_modsel.cpp  eleader_lastfm.cpp  finitelinrep.h  gzip.h  hls.cpp  leader.h  leader_jester.cpp  leaderelim.h  mixing.cpp  mmoful.h  modsel.cpp  multirep.cpp  oful.h  oful_jester.cpp  ofulbalancing_old.h  regbalancing.h  rewards.h  showres.py  simple.cpp  simple_continuous.cpp  simple_leader.cpp  simple_leaderelim.cpp  simple_linucb.cpp  simple_mab.cpp  test_corral.cpp  ucb.h  utils.h  vardim.cpp  (+1 more)
envs/: __init__.py  cbfinite.py  hlsutils.py  linear.py  multiclass.py  spaces.py  utils.py
hiddenfeat/: utils.py
lbrl/: README.md  epsgreedyglrt.py  hlsutils.py  leader.py  leaderselect.py  leaderselectlb.py  linearenv.py  linucb.py  superreplearner.py  utils.py
logs/: .~lock.hoful0.csv#
lrcb/: logger.py  utils.py
notebooks/: Analyze openml datasets.ipynb  Check Sherman Morrison.ipynb  GLRT LinUCB.ipynb  HLS Selection.ipynb  HLS in real datasets.ipynb  LeaderVariants_LinearRep.ipynb  Linear Random Features.ipynb  Maximin LinUCB.ipynb  One-hidden regression.ipynb  Random Features.ipynb  Sanity Checks.ipynb  UNISOFT_Logistic_Bandits.ipynb  adult_analysis.ipynb  contextual_hidden.ipynb  generate_nn_hls_problems.ipynb  ids.npy  lbrl_runner_parse_results.ipynb  multirep_tsne.ipynb  mushroom_analysis.ipynb  wheel_animation.ipynb  wheel_tsne.ipynb  xbrl_runner_parse_results.ipynb
problem_data/: aaa.py  bernoulli_gapmin1.npy  categorical_c3.npy  categorical_largegap.npy  generate_finiteproblem.py  generate_largegap.py  generate_mixing.py  generate_vardim.py  generate_wheel.py  linrep3.json  mixing_realizable.npy  new_features.npy  new_param.npy  preprocessJesterNN.py  simple_rep.json  vardim_weakhls.npy  vardimtest_c1.npy  vardimtest_icml_nonrealizable.npy  vardimtest_icml_real_nohls.npy  vardimtest_icml_realizable.npy  (+2 more)
script/: basis.py  (+7 more)
(+193 files in other folders)
